tests/ui/editions/edition-keywords-2018-2018-parsing.stderr
error: expected identifier, found keyword `async`
  --> $DIR/edition-keywords-2018-2018-parsing.rs:16:13
   |
LL |     let mut async = 1;
   |             ^^^^^ expected identifier, found keyword
   |
help: escape `async` to use it as an identifier
   |
LL |     let mut r#async = 1;
   |             ++

error: aborting due to previous error

